--- a/src/blocks/advanced-video/style.scss
+++ b/src/blocks/advanced-video/style.scss
@@ -1,9 +1,46 @@
 .wp-block-ub-advanced-video {
 	line-height: 0;
+	&.alignright {
+		.ub-advanced-video-embed {
+			float: right;
+			video {
+				float: right;
+			}
+			.ub-advanced-video-channel-details {
+				clear: both;
+				text-align: right;
+			}
+		}
+	}
+
+	&.alignleft {
+		.ub-advanced-video-embed {
+			float: left;
+			video {
+				float: left;
+			}
+			.ub-advanced-video-channel-details {
+				clear: both;
+				text-align: left;
+			}
+		}
+	}
+
+	&.aligncenter {
+		.ub-advanced-video-embed {
+			margin-inline-start: auto;
+			text-align: center;
+			margin-inline-end: auto;
+			.ub-advanced-video-channel-details {
+				text-align: center;
+			}
+		}
+	}
 }
 .ub-advanced-video-container {
 	width: 100%;
 	video {
+		width: 100%;
 		height: 100%;
 	}
 }
